--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li {
 }
 
 li::before {
-  content: url(assets/icon-list.svg);
+  content: url(asset/icon-list.svg);
   position: absolute;
   left: 0;
   top: 0;
