--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ li::before {
 
 /* success state */
 .successState {
-  display: block;
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
