--- a/style.css
+++ b/style.css
@@ -162,6 +162,11 @@ li::before {
   border: none;
   box-shadow: 0px 20px 40px #ff5967;
 }
+@media screen and (max-width: 412px) {
+  .active-state {
+    min-height: 100vh;
+  }
+}
 @media screen and (min-width: 481px) {
   .mobile-img {
     display: none;
