--- a/style.css
+++ b/style.css
@@ -1,264 +1,448 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap");
-*,
+@import url("assets/fonts/Inconsolata-VariableFont_wdth\,wght.ttf");
 *::before,
 *::after {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
+
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inconsolata", monospace;
+  background-image: url("assets/images/background-mobile.png");
+  background-size: cover;
+  color: hsl(0, 0%, 100%);
+  padding: 1rem;
   font-size: 1rem;
+}
+header {
+  position: relative;
+  width: 100%;
+}
+main {
+  width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: column nowrap;
 }
-.main {
-  min-height: 100vh;
+img {
+  display: block;
+}
+input {
+  background-color: transparent;
+}
+.page-logo,
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.active-state {
-  position: relative;
-}
-.hero-image {
-  width: 100%;
-}
-.desktop-img,
-.tablet-img {
-  display: none;
-}
-.mobile-img {
-  width: 100%;
-  height: auto;
-}
-img,
-.hero-image {
-  width: 100%;
-}
-.form,
-.info {
-  padding: 1.5rem;
-}
-.form {
-  padding: 0 1.5rem;
-}
-h1,
-.discription {
-  padding-bottom: 1.5rem;
+.page-logo img {
+  width: 150px;
 }
 h1 {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 0;
 }
-ul {
-  list-style: none outside;
+.sub-h1 {
+  font-size: 0.9em;
+  font-weight: 300;
+  color: hsl(252, 6%, 83%);
+  margin-bottom: 2rem;
 }
-li {
-  padding-bottom: 1rem;
-  padding-left: 2rem;
+.form-header {
+  text-align: center;
+}
+
+/* background image */
+
+.bgImage,
+.squiggly {
+  width: 100%;
+  height: 50%;
+  position: fixed;
+  z-index: -1;
+
+  left: 0;
+  background-size: 1000px;
+  background-repeat: no-repeat;
+}
+.bgImage {
+  background: url("assets/images/pattern-lines.svg");
+  top: 0;
+}
+.squiggly-top {
+  width: 100px;
+  height: 100px;
+  top: 3%;
+  right: 0;
+  position: absolute;
+  background-image: url("assets/images/pattern-squiggly-line-top.svg");
+  background-size: 100px;
+  background-repeat: no-repeat;
+}
+.squiggly {
+  height: 200px;
+  width: 100%;
+  background: url("assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg");
+  background-size: 300px;
+  background-repeat: no-repeat;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/*Form Section */
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+}
+form {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  max-width: 400px;
+}
+h3,
+label {
+  font-size: 20px;
+  font-weight: 300;
+  display: block;
+}
+h3 {
+  margin-bottom: 0.5rem;
+}
+
+/* Avatar */
+
+.uploadDisabled {
+  pointer-events: none;
+}
+.upload-avatar {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+.outterBorder {
+  width: 94%;
+  border-radius: 15px;
+  outline-offset: 2px;
+}
+
+.drag-and-drop {
+  width: 86.5%;
+  height: auto;
+  border: 2px dashed hsl(252, 6%, 83%);
+  border-radius: 15px;
+  padding: 1rem 1.5rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  background-color: hsla(245, 19%, 35%, 0.316);
+}
+.drag-and-drop,
+.upload {
+  cursor: pointer;
+}
+.dragFeedback {
+  background-color: rgba(255, 255, 255, 0.247);
+}
+.cloud-icon {
+  width: 41px;
+  height: 41px;
+  /*  position: absolute; */
+  background-color: hsla(245, 19%, 35%, 0.585);
+  border: 1px solid rgba(255, 255, 255, 0.184);
+  padding: 0.3rem;
+  border-radius: 10px;
+}
+.upload {
+  opacity: 0;
+}
+.upload-description {
+  font-size: 0.7em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.info {
+  display: flex;
+  flex-flow: row nowrap;
+  font-size: 0.7em;
+  gap: 10px;
+}
+a {
+  display: block;
+}
+.fileOptions {
+  font-size: 0.7em;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1rem;
+  display: none;
+  margin: 0;
+}
+a:any-link {
+  color: white;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.364);
+  padding: 4px;
+  border-radius: 5px;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+/* Shared Input */
+
+.inputField {
+  width: 85%;
+  height: 40px;
+  border: 2px solid hsla(245, 19%, 35%, 0.316);
+  border-radius: 10px;
+  background-color: hsla(245, 19%, 35%, 0.585);
+  margin: 0.9rem 0 1.5rem 0;
+  padding: 0 1rem;
+  color: white;
+}
+.inputField::placeholder,
+.inputField {
+  color: hsl(252, 6%, 83%);
+}
+.inputField:focus {
+  outline: 2px solid hsl(245, 15%, 58%);
+  outline-offset: 2px;
+  background-color: hsla(245, 19%, 35%, 0.585);
+}
+.inputField:hover {
+  background-color: rgba(255, 255, 255, 0.18);
+}
+
+/* Submit btn */
+
+.submitBtn {
+  font: inherit;
+  width: 95%;
+  height: 40px;
+  background-color: hsl(7, 88%, 67%);
+  border: none;
+  border-radius: 10px;
+}
+
+/* Generate Ticket Page */
+
+/* Text */
+
+h2 {
+  font-size: 1.7em;
+  text-align: center;
+}
+.sub-h2 {
+  text-align: center;
+  margin-bottom: 5rem;
+  width: 400px;
+}
+
+.userName {
+  background-image: linear-gradient(
+    to right,
+    hsl(7, 86%, 67%),
+    hsl(0, 0%, 100%)
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.emailPlaceholder {
+  color: hsl(7, 71%, 60%);
+}
+.emailAddress {
   position: relative;
 }
 
-li::before {
-  content: url(asset/icon-list.svg);
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.Email-address {
-  font-weight: bold;
-  padding-bottom: 0.5rem;
-  font-size: 0.7em;
+/* Ticket Engineering */
+.ticket {
+  max-width: 500px;
+  height: auto;
   display: flex;
-  justify-content: space-between;
-}
-.trigger-warning {
-  display: block;
-}
-.form {
-  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: column nowrap;
-}
-.email {
-  display: block;
-  width: 100%;
-  height: 50px;
-  border: 1px solid #d6d6d6;
-  border-radius: 7px;
-  margin-bottom: 1.5rem;
-  text-align: start;
-  padding-left: 1.5rem;
-  outline: none;
+  position: relative;
+  display: none;
 }
 
-.submit-btn,
-.dismiss {
-  font: inherit;
-  font-weight: 500;
+.ticket-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+}
+.ticketFrame {
+  display: block;
+  width: 330px;
+  position: relative;
+}
+.ticketDetails {
+  position: absolute;
+  bottom: -35px;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
+}
+.logoMark {
+  width: 30px;
+  height: 30px;
+  padding: 1rem;
+}
+.date,
+.userProfile,
+.gitHub {
+  display: flex;
+  flex-flow: row nowrap;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+.userProfile {
   width: 100%;
-  height: 50px;
-  border: 1px solid #25273b;
-  background-color: #222641;
-  color: white;
-  border-radius: 7px;
+  position: relative;
+  top: -5px;
+  left: 4px;
+  display: flex;
+  justify-content: flex-start;
+}
+.date {
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -10px;
+}
+h3 {
+  margin-top: -5px;
+  font-weight: bold;
+}
+.sub-h3 {
+  position: absolute;
+  white-space: nowrap;
+  top: 30px;
+  left: 60px;
+  font-size: 0.7em;
+}
+.profileImagePlaceholder {
+  width: 40px;
+  height: 40px;
+}
+.profileImagePlaceholder {
+  border-radius: 20px;
+  padding: 0.7rem;
+}
+.namePlaceholder {
+  padding-bottom: 1.5rem;
+}
+.userNameInTicket {
+  padding-left: 1.5rem;
+}
+.gitHub {
+  position: absolute;
+  left: 60px;
+  top: 25px;
+  font-size: 0.7em;
+  justify-content: center;
+  gap: 5px;
+  z-index: 1;
+}
+.gitHub img {
+  width: 15px;
+  height: 15px;
+}
+.ticketId {
+  position: relative;
+  bottom: 35px;
+  left: 207px;
+  transform: rotate(90deg);
+  color: hsl(245, 15%, 58%);
+  font-weight: bold;
+}
+/* XM */
+@media screen and (max-width: 320px) {
+  .ticket {
+    width: 300px;
+  }
+  .date {
+    top: 10px;
+  }
+  .ticketId {
+    left: 95%;
+    top: 1px;
+  }
+}
+@media screen and (min-width: 481px) {
+  body {
+    background-image: url("assets/images/background-tablet.png");
+  }
+  h2 {
+    font-size: 2em;
+  }
+  .ticket {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  body {
+    background-image: url("assets/images/background-desktop.png");
+  }
+  .squiggly {
+    background-image: url("assets/images/pattern-squiggly-line-bottom-desktop.svg");
+    width: 825px;
+    height: 400px;
+    background-size: 100%;
+  }
+  .squiggly-top {
+    width: 446px;
+    height: 208px;
+    background-size: 100%;
+    right: 0;
+    right: 0;
+    left: 100%;
+  }
+}
+
+/* On or off the screen */
+
+.attribution {
+  display: none;
+  position: absolute;
+  bottom: 20px;
 }
 
 /* Error State */
 
-.trigger-warning {
-  display: block;
-  opacity: 0;
-  content: "Valid email required";
-  color: red;
-  /* need display: inline */
-}
 .invalid {
-  /* need to add class */
-  border-color: firebrick;
-  background-color: #fee7e5;
-  color: #db7771;
-}
-
-/* success state */
-.successState {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  transition: all 0.5s;
-  min-height: 100vh;
-}
-.successful-pop-up {
-  min-height: 100vh;
-  padding: 2.5rem 1.5rem;
-  background-color: whitesmoke;
+  width: 100%;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: -10px;
+  margin-bottom: 1rem;
+  font-size: 0.7em;
+  color: red;
 }
-.dismiss {
-  margin-bottom: 2rem;
+/* Then set info-normal to none */
+.info-error {
+  color: red;
 }
-.tick {
-  width: 20%;
-  margin-top: 5rem;
-  margin-bottom: 2rem;
+.invalid,
+.info-error {
+  display: none;
 }
-.thank-you {
-  font-size: 2rem;
-  font-weight: bold;
-  padding-bottom: 1.5rem;
+/* Use this style in js: 
+.error {
+  outline: 2px solid red;
+  outline-offset: 2px;
 }
-.message {
-  line-height: 1.3rem;
-  margin-bottom: 16rem;
-}
-
-.dismiss:hover {
-  background-image: linear-gradient(to right, #ff5474, #ff6646);
-  border: none;
-  box-shadow: 0px 20px 40px #ff5967;
-}
-@media screen and (max-width: 412px) {
-  .active-state {
-    min-height: 100vh;
-  }
-}
-@media screen and (min-width: 481px) {
-  .mobile-img {
-    display: none;
-  }
-  .tablet-img {
-    display: block;
-  }
-  body {
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: hsl(234, 29%, 20%);
-  }
-
-  .active-state {
-    width: 500px;
-    background-color: white;
-    padding: 2rem;
-    border-radius: 5px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .main {
-    position: relative;
-  }
-  .tablet-img {
-    display: none;
-  }
-  .desktop-img {
-    display: block;
-    height: 100%;
-    width: 100%;
-  }
-  .main {
-    width: 700px;
-    height: 500px;
-    padding: 1rem;
-    border-radius: 15px;
-  }
-  .active-state {
-    width: 700px;
-    height: 500px;
-    background-color: white;
-    padding: 1.5rem;
-    border-radius: 15px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas:
-      "text text img img"
-      " text text img img"
-      " form form img img"
-      "form form img img";
-  }
-  .hero-image {
-    grid-area: img;
-  }
-  .info {
-    grid-area: text;
-  }
-  .form {
-    grid-area: form;
-    justify-content: flex-end;
-  }
-
-  .successState {
-    top: 30%;
-    left: 30%;
-    min-height: 300px;
-    width: 357px;
-  }
-  .successful-pop-up {
-    display: block;
-    min-height: 300px;
-    width: 100%;
-    border-radius: 15px;
-    padding: 1.5rem 2rem;
-  }
-  .successful-pop-up p {
-    margin: 0;
-    font-size: 0.8em;
-    padding: 0.5rem 0;
-  }
-  .thank-you {
-    padding: 0;
-  }
-  .dismiss {
-    font: inherit;
-    margin: 0.5rem 0;
-  }
-  .tick {
-    margin: 0;
-    padding: 0.5rem 0;
-  }
-}
+   */
